--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
 		android:layout_alignParentTop="true"
 		android:layout_centerHorizontal="true"
         android:layout_centerInParent="true"
-        android:text="Press mic button and speak"
+        android:text="Press mic icon and speak"
 		android:layout_marginTop="15dp"
         android:padding="5dp"
         android:textColor="#fff"
